--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,8 +2,9 @@
 
 //core
 @import "core/reset";
-@import "core/variables";
+@import "core/colors";
 @import "core/typography";
+@import "core/variables";
 @import "core/base";
 
 //components
