--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -8,7 +8,18 @@ body {
   font-weight: normal;
 }
 
+//NOTE: percentage may not be best way
 .content-width {
   width: 80%;
   margin: 0 auto;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+.page-title {
+  font-family: $font-primary;
+  font-size: $font-size--25;
+  text-transform: uppercase;
 }
