--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -5,6 +5,7 @@ $font-size--15: 15px;
 $font-size--16: 16px;
 $font-size--20: 20px;
 $font-size--25: 25px;
+$font-size--40: 40px;
 $font-size--115: 115px;
 $font-size--140: 140px;
 $font-size--300: 300px;
