fix: body font not loading

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ select {
   font-display: swap;
 }
 body {
+  font-family: "Gill Sans, sans-serif";
   /* base font size */
   font-size: 1rem;
 }
