--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -6,6 +6,8 @@ $brand-light: $white;
 $font-primary: "Gill Sans";
 $font-secondary: "PT Serif";
 
+$body-font-family: "#{$font-primary}, sans-serif";
+
 //1 px = 0.0625 rem
 $px-to-rem-factor: 0.0625;
 $base-font-size: calc($font-size--16 * $px-to-rem-factor);
