--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,6 +9,7 @@
 
 //components
 @import "components/hero";
+@import "components/client-quote";
 @import "components/button";
 @import "components/footer";
 @import "components/navigation";
