--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "core/base";
 
 //components
+@import "components/logo";
 @import "components/hero";
 @import "components/client-quote";
 @import "components/button";
