--- a/css/styles.css
+++ b/css/styles.css
@@ -163,12 +163,32 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+.hero::before {
   background-image: url("../images/home-hero.jpg");
-  background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
   opacity: 80%;
-  color: #ffffff;
+}
+.hero::after {
+  background-color: #ffd140;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 80%;
 }
 .hero .hero-cta {
   margin-top: 64px;
