--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,9 +10,13 @@
 //components
 @import "components/logo";
 @import "components/hero";
+@import "components/date-block";
 @import "components/client-quote";
 @import "components/button";
 @import "components/footer";
 @import "components/navigation";
 @import "components/banner";
 @import "components/form";
+
+//partials
+@import "partials/events";
