--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -18,8 +18,11 @@ body {
   text-transform: uppercase;
 }
 
-.page-title {
+//TODO: underline
+.section-title {
   font-family: $font-primary;
   font-size: $font-size--25;
   text-transform: uppercase;
+  margin-bottom: 45px;
+  display: block;
 }
