--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -19,6 +19,20 @@
         .blog-title {
           font-size: 15px;
           margin-bottom: 11px;
+
+          a {
+            text-decoration: none;
+            color: $brand-dark;
+
+            &::before {
+              content: " ";
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            }
+          }
         }
         .blog-paragraph {
           font-size: 13px;
