--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,32 @@ footer .footer-content .copyright {
   color: #ffffff;
 }
 
+.banner-medium {
+  height: auto;
+  position: relative;
+  margin-bottom: 57px;
+}
+.banner-medium img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  width: 100%;
+  height: 100%;
+}
+.banner-medium .banner-text {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ee4367;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .form-subscribe {
   display: flex;
 }
