--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,7 @@
 @import "components/button";
 @import "components/footer";
 @import "components/navigation";
-@import "components/banner";
+// @import "components/banner";
 @import "components/form";
 
 //partials
