--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,7 @@ body {
 }
 .btn--medium {
   width: 167px;
+  height: 60px;
 }
 .btn--wide {
   width: 100%;
@@ -392,6 +393,43 @@ footer .footer-content .copyright {
 }
 .navbar--home .links a {
   color: #ffffff;
+}
+
+.wrapper-contact {
+  max-width: 100%;
+  display: flex;
+  gap: 50px;
+}
+.wrapper-contact .location {
+  max-width: 100%;
+}
+.wrapper-contact .location .map {
+  margin-bottom: 34px;
+  max-width: 100%;
+  height: 442px;
+}
+.wrapper-contact .location address {
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 100;
+  max-width: 100%;
+  height: 161px;
+}
+.wrapper-contact .contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  width: 529px;
+  height: 560px;
+}
+.wrapper-contact .contact-form .form-element {
+  border: none;
+  background-color: #f5f5f5;
+  height: 60px;
+  padding: 20px;
+}
+.wrapper-contact .contact-form .message {
+  height: 200px;
 }
 
 .form-subscribe {
