--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,3 +1,48 @@
+.wrapper-contact {
+  max-width: 100%;
+  display: flex;
+  gap: 50px;
+
+  // flex-direction: column-reverse;
+
+  .location {
+    //set max-widths prevent horizontal scrolling in Firefox caused by image width otherwise image width of 400px
+    max-width: 100%;
+    .map {
+      margin-bottom: 34px;
+      max-width: 100%;
+      height: 442px;
+    }
+    address {
+      font-style: normal;
+      font-size: 18px; //convert to rem
+      font-weight: 100;
+      max-width: 100%;
+      height: 161px;
+    }
+  }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    //not sure if needs to be relative or absolute size?
+    width: 529px;
+    height: 560px;
+
+    .form-element {
+      border: none;
+      background-color: #f5f5f5;
+      height: 60px;
+      padding: 20px;
+    }
+
+    .message {
+      height: 200px;
+    }
+  }
+}
+
 .form-subscribe {
   display: flex;
   .form-element {
