--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -18,7 +18,16 @@ body {
   text-transform: uppercase;
 }
 
-//TODO: underline
+// https://generatepress.com/forums/topic/how-can-i-draw-a-partial-line-under-text/
+.underline:after {
+  content: "";
+  display: block;
+  width: 229px;
+  height: 1px;
+  background-color: $brand-dark;
+  margin-top: 10.5px;
+}
+
 .section-title {
   font-family: $font-primary;
   font-size: $font-size--25;
