--- a/css/styles.css
+++ b/css/styles.css
@@ -356,6 +356,7 @@ footer .footer-content .copyright {
 .navbar {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 85.5px;
 }
 .navbar .nav-content {
   height: 90px;
@@ -479,6 +480,21 @@ footer .footer-content .copyright {
   color: #ee4367;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 95px;
+}
+.about h1 {
+  margin-top: -53px;
+}
+.about p {
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: 1.6px;
+  line-height: 18px;
+}
+
 .blogs {
   display: flex;
   flex-wrap: wrap;
@@ -510,9 +526,6 @@ footer .footer-content .copyright {
 }
 
 /* breakpoint small */
-.blog-post-detail {
-  margin-top: 55.5px;
-}
 .blog-post-detail .blog-banner {
   margin: 0 auto;
   width: 981px;
