--- a/scss/pages/_blogDetail.scss
+++ b/scss/pages/_blogDetail.scss
@@ -5,6 +5,7 @@
     width: 981px;
     height: 300px;
     margin-bottom: 57px;
+    position: relative;
     // img {
     //   object-fit: cover;
     //   object-position: center;
