--- a/scss/pages/_blogDetail.scss
+++ b/scss/pages/_blogDetail.scss
@@ -6,10 +6,15 @@
     height: 300px;
     margin-bottom: 57px;
     position: relative;
-    // img {
-    //   object-fit: cover;
-    //   object-position: center;
-    // }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: linear-gradient(rgba($pink, 0.8), rgba($pink, 0.8));
+    }
 
     .date-block-large {
       position: absolute;
