feature: general overlay

--- a/css/styles.css
+++ b/css/styles.css
@@ -533,7 +533,7 @@ footer .footer-content .copyright {
   margin-bottom: 57px;
   position: relative;
 }
-.blog-post-detail .blog-banner .overlay {
+.blog-post-detail .blog-banner .blog-overlay {
   position: absolute;
   top: 0;
   left: 0;
