--- a/scss/pages/_blogDetail.scss
+++ b/scss/pages/_blogDetail.scss
@@ -7,13 +7,8 @@
     margin-bottom: 57px;
     position: relative;
 
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: linear-gradient(rgba($pink, 0.8), rgba($pink, 0.8));
+    .blog-overlay {
+      @include overlay($pink);
     }
 
     .date-block-large {
