--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -8,6 +8,7 @@ $spacing-nav: calc(48 / #{$base-font-size});
   // text-shadow: 1px 1px 1px black;
   margin-left: auto;
   margin-right: auto;
+  //TODO: fix bottom margin since we have varying margin-tops on the section-titles ???
   margin-bottom: 85.5px;
 
   .nav-content {
