--- a/scss/pages/_blogDetail.scss
+++ b/scss/pages/_blogDetail.scss
@@ -1,11 +1,14 @@
 .blog-post-detail {
-  // margin-top: 55.5px;
   .blog-banner {
     margin: 0 auto;
-    width: 981px;
-    height: 300px;
     margin-bottom: 57px;
     position: relative;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 300px;
+    }
 
     .blog-overlay {
       @include overlay($pink);
