--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ select {
   font-display: swap;
 }
 body {
-  font-family: "Gill Sans, sans-serif";
+  font-family: "Gill Sans";
   /* base font size */
   font-size: 1rem;
 }
@@ -155,6 +155,71 @@ body {
   text-transform: uppercase;
   margin-bottom: 45px;
   display: block;
+}
+
+.font-color-1 {
+  color: #ffd140;
+}
+
+.font-color-2 {
+  color: #ee4367;
+}
+
+.font-color-3 {
+  color: #08ad69;
+}
+
+.font-color-4 {
+  color: #540d6e;
+}
+
+.font-color-5 {
+  color: #3bceab;
+}
+
+.overlay-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(255, 209, 64, 0.8), rgba(255, 209, 64, 0.8));
+}
+
+.overlay-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(238, 67, 103, 0.8), rgba(238, 67, 103, 0.8));
+}
+
+.overlay-3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(8, 173, 105, 0.8), rgba(8, 173, 105, 0.8));
+}
+
+.overlay-4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(84, 13, 110, 0.8), rgba(84, 13, 110, 0.8));
+}
+
+.overlay-5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(59, 206, 171, 0.8), rgba(59, 206, 171, 0.8));
 }
 
 .logo--light, .logo {
@@ -534,45 +599,39 @@ footer .footer-content .copyright {
 .gallery-items-wrapper a img {
   display: block;
 }
-.gallery-items-wrapper a .overlay-1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(rgba(255, 209, 64, 0.8), rgba(255, 209, 64, 0.8));
+
+.gallery-item-detail .gallery-item-banner {
+  margin-bottom: 50.5px;
+  position: relative;
 }
-.gallery-items-wrapper a .overlay-2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+.gallery-item-detail .gallery-item-banner img {
+  display: block;
   width: 100%;
-  background: linear-gradient(rgba(238, 67, 103, 0.8), rgba(238, 67, 103, 0.8));
 }
-.gallery-items-wrapper a .overlay-3 {
+.gallery-item-detail .gallery-item-banner .gallery-item-header {
   position: absolute;
-  top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(rgba(8, 173, 105, 0.8), rgba(8, 173, 105, 0.8));
+  bottom: -70px;
+  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.16);
 }
-.gallery-items-wrapper a .overlay-4 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(rgba(84, 13, 110, 0.8), rgba(84, 13, 110, 0.8));
+.gallery-item-detail .gallery-item-banner .gallery-item-header .xxl-text {
+  font-size: 300px;
+  letter-spacing: 0px;
+  line-height: 344px;
 }
-.gallery-items-wrapper a .overlay-5 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(rgba(59, 206, 171, 0.8), rgba(59, 206, 171, 0.8));
+.gallery-item-detail .gallery-item-banner .gallery-item-header .xl-text {
+  font-size: 140px;
+  letter-spacing: 0px;
+  line-height: 161px;
+}
+.gallery-item-detail .details {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  font-style: italic;
+  font-weight: 300;
+  letter-spacing: 1.6px;
+  line-height: 18px;
 }
 
 .blogs {
