--- a/scss/pages/_gallery.scss
+++ b/scss/pages/_gallery.scss
@@ -2,6 +2,10 @@ $opacity: 0.7;
 
 .gallery-items-wrapper {
   display: flex;
+
+  //looks good on both smaller and larger screen sizes
+  justify-content: space-evenly;
+
   flex-wrap: wrap;
   gap: 20px;
 
