--- a/scss/partials/_events.scss
+++ b/scss/partials/_events.scss
@@ -7,6 +7,7 @@
   .events-list {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
 
